index.handlebars added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,7 @@
   </head>
   <body>
     <h1>Chill App</h1>
-
-    <script type="text/javascript">
-    const Handlebars = require("handlebars");
-    const template = Handlebars.compile("Name: {{name}}");
-    console.log(template({ name: "Nils" }));
-    </script>
+  <!-- Triple brackets -->
+  <!-- Learn handlebars syntax--->
   </body>
 </html>
