fixed more html styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,9 +9,5 @@
 
     <title>Chill App</title>
   </head>
-  <body>
-    <h1>Chill App</h1>
-  <!-- Triple brackets -->
-  <!-- Learn handlebars syntax--->
-  </body>
+    {{{body}}}
 </html>
