added database and corrected issue where app would not show index of stores added

--- a/views/stores-new.handlebars
+++ b/views/stores-new.handlebars
@@ -2,16 +2,16 @@
 
 <div class="row">
   <div class="col-sm-4 col-sm-offset-4">
-    <form action="/posts/new" method="post">
+    <form action="/stores/new" method="post">
       <legend>New Store</legend>
       <div class="form-group">
-        <label for="store-name">Title</label>
+        <label for="store-name">Name</label>
         <input
           type="text"
-          name="title"
+          name="name"
           class="form-control"
-          id="post-title"
-          placeholder="Title"
+          id="store-name"
+          placeholder="Name"
         />
       </div>
       <div class="form-group">
