added queue number to store post request

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,8 @@
         <li class="list-group-item">
           <div class="lead">{{this.name}}</div>
           <a href="{{this.url}}" target="_blank">{{this.url}}</a>
+          <p>{{this.summary}}</p>
+          <p>Users in line: {{this.queue}}</p>
         </li>
       {{/each}}
     </ul>
