--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,6 +22,7 @@
           <a href="{{this.url}}" target="_blank">{{this.url}}</a>
           <p>{{this.summary}}</p>
           <p>Users in line: {{this.queue}}</p>
+          <button type="submit" class="btn btn-primary">Join Queue</button>
         </li>
       {{/each}}
     </ul>
