--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,10 @@
     <ul>
       {{#each store}}
         <li class="list-group-item">
-          <div class="lead">{{this.name}} <a href="/store/{{this._id}}"> <button type="submit" class="btn btn-primary">Details</button></a></div>
+          <div class="lead">{{this.name}} <a href="store/{{this._id}}"> <button type="submit" class="btn btn-primary">Details</button></a></div>
           <a href="{{this.url}}" target="_blank">{{this.url}}</a>
           <p>{{this.summary}}</p>
+          {{this._id}}
           <p>Users in line: {{this.queue}}</p>
           <button type="submit" onclick="joinQueue" class="btn btn-primary">Join Queue</button>
         </li>
