fixed routing issue

--- a/views/stores-detail.handlebars
+++ b/views/stores-detail.handlebars
@@ -7,9 +7,9 @@
     <title>{{store.name}} Details</title>
 </head>
 <body>
-    {{#with store as | store |}}
+    {{#with storeId as | storeId |}}
     testjstdadsgjhda
-    {{store.name}}
+    {{storeId}}
     {{/with}}
     
 </body>
