--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,6 +37,7 @@
               <a href="{{this.url}}" class="card-link">{{this.url}}</a>
               <p class="card-text">Users in line: {{this.queue}}</p>
               <button type="submit" class="btn btn-primary">Join Queue</button>
+              <a href="store/{{this._id}}"><button type="submit" class="btn btn-primary">Details</button></a>
             </div>
           </div>
         {{/each}}
