--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,12 +6,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <link href="/css/index.css">
 
     <title>Chill App</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <h1>Chill App</h1>
+  <!-- Triple brackets -->
+  <!-- Learn handlebars syntax--->
+     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand">Chill App</a>
         <a class="nav-link" href="/stores/new">Add store</a>
@@ -40,20 +42,24 @@
             </div>
           </div>
         {{/each}}
+        </div>
       </div>
-        {{!-- <ul>
-          {{#each store}}
-            <li class="list-group-item">
-              <div class="lead">{{this.name}}</div>
-              <a href="{{this.url}}" target="_blank">{{this.url}}</a>
-              <p>{{this.summary}}</p>
-              <p>Users in line: {{this.queue}}</p>
-              <button type="submit" class="btn btn-primary">Join Queue</button>
-            </li>
-          {{/each}}
-        </ul> --}}
-      </div>
-      </div>
+    </div>
   </div>
+  {{!-- <div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <ul>
+      {{#each store}}
+        <li class="list-group-item">
+          <div class="lead">{{this.name}}</div>
+          <a href="{{this.url}}" target="_blank">{{this.url}}</a>
+          <p>{{this.summary}}</p>
+          <p>Users in line: {{this.queue}}</p>
+          <button type="submit" class="btn btn-primary">Join Queue</button>
+        </li>
+      {{/each}}
+    </ul>
+  </div> --}}
+{{!-- </div> --}}
   </body>
 </html>
