--- a/views/stores-detail.handlebars
+++ b/views/stores-detail.handlebars
@@ -8,8 +8,8 @@
 </head>
 <body>
     {{#with storeId as | storeId |}}
-    testjstdadsgjhda
-    {{storeId}}
+    testjstdadsgjhd
+    {{storeId.name}}
     {{/with}}
     
 </body>
