fixed auth secret

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -10,6 +10,10 @@
         <label for="post-url">Password</label>
         <input type="password" name="password" class="form-control" id="user-password" placeholder="Please enter password...">
       </div>
+      <div class="form-group">
+        <label for="post-firstName">First Name</label>
+        <input type="firstName" name="firstName" class="form-control" id="user-firstName" placeholder="Please enter your first name...">
+      </div>
       <div class='text-right'>
         <button type="submit" class="btn btn-primary">Sign Up</button>
       </div>
