--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,8 +36,8 @@
               <h4 class="card-title">{{this.name}}</h4>
               <a href="{{this.url}}" class="card-link">{{this.url}}</a>
               <p class="card-text">Users in line: {{this.queue}}</p>
-              <button type="submit" class="btn btn-primary">Join Queue</button>
-              <a href="store/{{this._id}}"><button type="submit" class="btn btn-primary">Details</button></a>
+              <a href="store/{{this._id}}/join_queue"><button type="submit" class="btn btn-primary">Join Queue</button></a>
+              <a href="store/{{this._id}}" method="post"><button type="submit" class="btn btn-primary">Details</button></a>
             </div>
           </div>
         {{/each}}
