--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,20 +11,11 @@
     <title>Chill App</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand">Chill App</a>
-        <a class="nav-link" href="/stores/new">Add store</a>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
   <!-- Triple brackets -->
   <!-- Learn handlebars syntax--->
   <div class="container">
     <div class="row">
+      <!--{{#if currentUser}}-->
       <h2>Browse stores</h2>
     </div>
     <div class="row">
@@ -55,6 +46,7 @@
         </ul> --}}
       </div>
       </div>
+      <!--{{/if}}-->
   </div>
   </body>
 </html>
