put store cards in a row on index page

--- a/views/stores-detail.handlebars
+++ b/views/stores-detail.handlebars
@@ -7,9 +7,9 @@
     <title>{{store.name}} Details</title>
 </head>
 <body>
-    {{#with store as | store |}}
-    testjstdadsgjhda
-    {{store.name}}
+    {{#with storeId as | storeId |}}
+    testjstdadsgjhd
+    {{storeId.name}}
     {{/with}}
     
 </body>
