--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,20 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="css/index.css">
+
     <title>Chill App</title>
   </head>
   <body>
-    <h1>Chill App</h1>
   <!-- Triple brackets -->
   <!-- Learn handlebars syntax--->
      <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand">Chill App</a>
-        <a class="nav-link" href="/stores/new">Add store</a>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <a class="navbar-brand" href="/">Chill App</a>
+        <a class="nav-link text-center" href="/stores/new">Add store</a>
+        <a href="/sign-up">Logout</a>
+        {{#if user}}
+          <a href="/sign-up">Logout</a>
+        {{/if}}
       </div>
     </nav>
   <!-- Triple brackets -->
@@ -29,21 +30,22 @@
     <div class="row">
       <h2>Browse stores</h2>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="container">
         {{#each store}}
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h4 class="card-title">{{this.name}}</h4>
               <a href="{{this.url}}" class="card-link">{{this.url}}</a>
               <p class="card-text">Users in line: {{this.queue}}</p>
               <button type="submit" class="btn btn-primary">Join Queue</button>
+              <a href="store/{{this._id}}"><button type="submit" class="btn btn-primary">Details</button></a>
             </div>
           </div>
-        {{/each}}
         </div>
-      </div>
+        {{/each}}
     </div>
   </div>
   {{!-- <div class="row">
