--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,3 +15,8 @@ justify-content: flex-start;
     margin-top: 20px;
     margin-bottom: 15px;
 }
+a{
+    text-decoration: none;
+    color: white;
+    font-size: large;
+}
