--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,21 +23,17 @@
   <!-- Learn handlebars syntax--->
   <div class="container">
     <div class="row">
-      {{#if currentUser}}
       <h2>Browse stores</h2>
-      {{/if}}
     </div>
-  </div>
-  <div class="container">
     <div class="row">
         {{#each store}}
-        <div class="col-md-3 col-sm-6">
+        <div class="col">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title">{{this.name}}</h4>
+              <h2 class="card-title">{{this.name}}</h2>
               <a href="{{this.url}}" class="card-link">{{this.url}}</a>
-              <p class="card-text">Users in line: {{this.queue}}</p>
-              <button type="submit" class="btn btn-primary">Join Queue</button>
+              <p class="card-text">Users in line: {{store.queue}}</p>
+              {{!-- <button type="submit" class="btn btn-primary">Join Queue</button> --}}
               <a href="store/{{this._id}}/join_queue" method="post"><button type="submit" class="btn btn-primary">Join Queue</button></a>
               <a href="store/{{this._id}}" method="post"><button type="submit" class="btn btn-primary">Details</button></a>
             </div>
