--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <form action="/login" method="post">
-      <legend>Log In</legend>
-      <div class="form-group">
-        <label for="post-title">Username</label>
-        <input type="text" name="username" class="form-control" id="username" placeholder="Please enter username...">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/auth.css">
+
+    <title>Chill App</title>
+  </head>
+  <body>
+
+    <div class="sidenav">
+      <div class="login-main-text">
+        <h1>Welcome back!</h1>
       </div>
-      <div class="form-group">
-        <label for="post-url">Password</label>
-        <input type="password" name="password" class="form-control" id="user-password" placeholder="Please enter password...">
+    </div>
+
+    <div class="main">
+      <div class="col-md-6 col-sm-1c2 offset-3">
+        <div class="login-form">
+          <form action="/login" method="post">
+            <legend>Log In</legend>
+            <div class="form-group">
+              <label for="post-title">Username</label>
+              <input type="text" name="username" class="form-control" id="username" placeholder="Please enter username...">
+            </div>
+            <div class="form-group">
+              <label for="post-url">Password</label>
+              <input type="password" name="password" class="form-control" id="user-password" placeholder="Please enter password...">
+            </div>
+            <div class='text-right'>
+              <button href="/login"type="submit" class="btn btn-primary">Log In</button>
+            </div>
+          </form>
+        </div>
       </div>
-      <div class='text-right'>
-        <button href="/login"type="submit" class="btn btn-primary">Log In</button>
-      </div>
-    </form>
-  </div>
-</div>
+    </div>
