--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="css/auth.css">
 
     <title>Chill App</title>
   </head>
@@ -46,26 +46,3 @@
     </div>
   </body>
 </html>
-
-{{!-- <div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <form action="/sign-up" method="post">
-      <legend>Sign Up</legend>
-      <div class="form-group">
-        <label for="post-title">Username</label>
-        <input type="text" name="username" class="form-control" id="username" placeholder="Please enter username...">
-      </div>
-      <div class="form-group">
-        <label for="post-url">Password</label>
-        <input type="password" name="password" class="form-control" id="user-password" placeholder="Please enter password...">
-      </div>
-      <div class="form-group">
-        <label for="post-firstName">First Name</label>
-        <input type="firstName" name="firstName" class="form-control" id="user-firstName" placeholder="Please enter your first name...">
-      </div>
-      <div class='text-right'>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
-      </div>
-    </form>
-  </div>
-</div> --}}
