--- a/views/stores-new.handlebars
+++ b/views/stores-new.handlebars
@@ -1,41 +1,54 @@
 <!-- TODO: Reformat -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <form action="/stores/new" method="post">
-      <legend>New Store</legend>
-      <div class="form-group">
-        <label for="store-name">Name</label>
-        <input
-          type="text"
-          name="name"
-          class="form-control"
-          id="store-name"
-          placeholder="Name"
-        />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="css/newStore.css">
+  </head>
+  <body>
+    <div class="row">
+      <div class="col-md-6 offset-3 text-center">
+        <form action="/stores/new" method="post">
+          <legend>New Store</legend>
+          <div class="form-group">
+            <label for="store-name">Name</label>
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              id="store-name"
+              placeholder="Name"
+            />
+          </div>
+          <div class="form-group">
+            <label for="store-url">Url</label>
+            <input
+              type="url"
+              name="url"
+              class="form-control"
+              id="store-url"
+              placeholder="https://www.google.com"
+            />
+          </div>
+          <div class="form-group">
+            <label for="store-summary">Summary</label>
+            <textarea
+              name="summary"
+              class="form-control"
+              id="store-summary"
+              placeholder="Summary"
+            ></textarea>
+          </div>
+          <div class="text-right">
+            <button type="submit" class="btn btn-primary">Add Store</button>
+          </div>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="store-url">Url</label>
-        <input
-          type="url"
-          name="url"
-          class="form-control"
-          id="store-url"
-          placeholder="https://www.google.com"
-        />
-      </div>
-      <div class="form-group">
-        <label for="store-summary">Summary</label>
-        <textarea
-          name="summary"
-          class="form-control"
-          id="store-summary"
-          placeholder="Summary"
-        ></textarea>
-      </div>
-      <div class="text-right">
-        <button type="submit" class="btn btn-primary">Add Store</button>
-      </div>
-    </form>
-  </div>
-</div>
+    </div>
+  </body>
+</html>
