fixed typo in handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@
       <h2>Browse stores</h2>
     </div>
     <div class="row">
-        {{#each store}}
+        {{#each stores}}
         <div class="col">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
