--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,10 @@
               <a href="{{this.url}}" class="card-link">{{this.url}}</a>
               <p class="card-text">Users in line: {{this.queue.length}}</p>
               {{!-- <button type="submit" class="btn btn-primary">Join Queue</button> --}}
-              <a href="store/{{this._id}}/join_queue" method="post"><button type="submit" class="btn btn-primary">Join Queue</button></a>
+              <form action="store/{{this._id}}/join_queue" method="post">
+                <button type="submit" class="btn btn-primary">Join Queue</button>
+              </form>
+              
               <a href="store/{{this._id}}" method="post"><button type="submit" class="btn btn-primary">Details</button></a>
             </div>
           </div>
