--- a/views/partials/sign-up.handlebars
+++ b/views/partials/sign-up.handlebars
@@ -12,7 +12,9 @@
     <title>Chill App</title>
   </head>
   <body>
-
+    {{#if currentUser }}
+    {{ body }}
+    {{else }}
     <div class="sidenav">
       <div class="login-main-text">
         <h1>Welcome to Chill!</h1>
@@ -46,3 +48,4 @@
     </div>
   </body>
 </html>
+{{/if}}
